--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "tap test.js"
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "test": "standard && nyc tap test.js"
   },
   "keywords": [
     "stream",
@@ -15,10 +16,13 @@
     "write"
   ],
   "devDependencies": {
-    "tap": "^10.7.2"
+    "codecov": "^3.2.0",
+    "nyc": "^13.3.0",
+    "standard": "^12.0.1",
+    "tap": "^12.6.1"
   },
   "dependencies": {
-    "channel-surfer": "^1.0.1"
+    "channel-surfer": "^2.0.1"
   },
   "repository": {
     "type": "git",
